force-app/main/default/objects/Twilio_Credentials__c/Twilio_Credentials__c.object-meta.xml
<CustomObject>
    <label>Twilio Credentials</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Twilio Credential</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twilio Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>