force-app/main/default/objects/Twilio_Credentials__c/fields/Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Account_SID__c</fullName>
    <inlineHelpText>Your Account SID can be found on the homepage in your Twilio Console.</inlineHelpText>
    <label>Account SID</label>
    <length>34</length>
    <type>Text</type>
</CustomField>